5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1596_825.log
== TEST (2019-04-01 16:00:52) 
-- CODE:
x =  float(input("aaa"))
y = 3,14*x**2
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:01:12) 
-- CODE:
x =  float(input("aaa"))
y = 3,14*x**2
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:18:51) 
-- CODE:
x =  float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))​x =  float(input("aaa"))
y = 3,14*x**2
-- EXECUTION TIME:
0.136942
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 5
    print(round(z, 3))\u200bx =  float(input())
                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:19:17) 
-- CODE:
x =  float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.125304
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:19:19) 
-- CODE:
x =  float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.154671
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:19:57) 
-- CODE:
x =  int(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.1145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 1, in <module>
    x =  int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:20:05) 
-- CODE:
x =  int(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.163105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 1, in <module>
    x =  int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:20:16) 
-- CODE:
x =  int(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x =  int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:21:50) 
-- CODE:
x =  int(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.191713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 1, in <module>
    x =  int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:22:15) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.180039
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:23:10) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:23:44) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:25:02) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:25:05) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:29:36) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:06:55) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:07:01) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.137294
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:07:06) 
-- CODE:
x = float(input("aaa"))
y = 3.14*x**2
z = 4/3*3.14*x**3
print(round(y, 3))
print(round(z, 3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:10:28) 
-- CODE:
x = float(input("aaa"))
y = 3.14159265359*x**2
z = 4/3*3.14159265359*x**3
print(round(y, 3))
print(round(z, 3))
-- EXECUTION TIME:
0.143376
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
